--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <title>Practice Technical</title>
 </head>
 <body>
-  
+  <h1 style="color: #ffffff; background-color: #111927;">Hello CodeWorks</h1>
+  <h6>Scott Lyman</h6>
+  <p>Coding is <b>Fun!</b></p>
+  <img src="https://bcw.blob.core.windows.net/public/img/8600856373152463" height="250px">
+<script></script>
   <!-- YOUR CODE HERE -->
 
 
